@@ -190,7 +190,7 @@ and templates are reloaded every request.
 Data may be imported and converted from other services using the
 .Ic import
 command.
-Currently supports Mastodon and Twitter exported data.
+Currently supports Mastodon, Twitter, and Instagram exported data.
 Posts are imported and backdated to appear as old honks.
 The Mastodon following list is imported, but must be refollowed.
 .Pp
@@ -201,6 +201,9 @@ To prepare a Twitter data archive, extract the twitter-longhash.zip file.
 After unzipping the data archive, navigate to the tweet_media directory
 and unzip any zip files contained within.
 .Dl ./honk import username twitter source-directory
+.Pp
+To prepare an Instagram data archive, extract the igusername.zip file.
+.Dl ./honk import username instagram source-directory
 .Ss Advanced Options
 Advanced configuration values may be set by running the
 .Ic setconfig Ar key value
