@@ -2,6 +2,8 @@ changelog
 
 === next
 
++ Import from instagram.
+
 + improve handling of some Page and Link objects
 
 + search can now load external posts
